Fix heading on small mobile devices
Prevent misalignment of second line when heading text wraps.

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -127,6 +127,7 @@ h4 {
   color: #000;
   padding: 8px;
   padding: 0.5rem;
+  display: block;
 }
 
 #header {
